--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ div {
 width 100%;
 height 100vh;
 border: 1px solid black;
-font-family: roboto;
+font-family: "roboto", sans-serif;
 font-size: 12px;
 font-weight: 600;
 }
