--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 .box {
     width: 200px;
     height: 200px;
-    background-color: green;
-    border: 15px solid red;
+    background-color: rgb(35, 221, 35);
+    border: 15px solid rgb(241, 10, 10);
     padding: 15px;
     margin: 15px;
     box-sizing: border-box;
