--- a/style.css
+++ b/style.css
@@ -1,9 +1,17 @@
-.box {
-    width: 200px;
-    height: 200px;
-    background-color: rgb(35, 221, 35);
-    border: 15px solid rgb(241, 10, 10);
-    padding: 15px;
-    margin: 15px;
-    box-sizing: border-box;
+div {
+    background-color: red;
+    color: white;
+    font-size: 24px;
+}
+
+@media (max-width: 992px) {
+    div {
+        font-size: 20px;
+    }
+}
+
+@media (max-width: 576px) {
+   div {
+    font-size: 16px;
+   } 
 }
