--- a/style.css
+++ b/style.css
@@ -1,17 +1,26 @@
 div {
-    background-color: red;
+    transition: background-color 300ms;
+}
+
+div:hover {
+background-color: rgba(240, 169, 240, 0.3);
+}
+
+button {
+    animation: float 2000ms infinite alternate-reverse;
+    transition: all 300ms;
+}
+
+button:hover {
+    background-color: black;
     color: white;
-    font-size: 24px;
 }
 
-@media (max-width: 992px) {
-    div {
-        font-size: 20px;
+@keyframes float {
+    0% {
+transform: translateY(0)
     }
-}
-
-@media (max-width: 576px) {
-   div {
-    font-size: 16px;
-   } 
+    100% {
+transform: translateY(10px);
+    }
 }
