--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ button:hover {
 
 @keyframes float {
     0% {
-transform: translateY(0)
+transform: translateY(4px)
     }
     100% {
 transform: translateY(10px);
